<resources>
    <string name="mail" translatable="false">parobd250@gmail.com</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="bangla_font_sample">Font Size %dpx</string>
    <string name="arabic_font_sample" translatable="false">بِسْمِ ٱللّٰهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</string>
    <string name="copy_warning">Want to change storage?\nTo change the location of the file, you need to move the previous files. This will take some time.</string>
    <string name="share_hint">If you like the app, please share it with others. Everyone who learns the Qur\'an from your share, you will be equally rewarded, Inshallah.</string>
    <string name="permission_req">Permission Required</string>
    <string name="loc_req">LOcation permission required once to get prayer time and Qibla direction</string>
    <string name="enter_num">Enter ayah number</string>
    <string name="stop_after_sura">Stop audio after this sura</string>
    <string name="stop_time">Stop audio after</string>
    <string name="minutes">Minutes</string>
    <string name="agree">Agree</string>
    <string name="optional">Keep in Mind</string>
    <string name="about_root">Every language has some root word (base form) before which prefix and after which suffix are added to form new words.\n\nSuch as: from the root "write" many more words can be formed- writing, write, writer, written etc.\n\nNow, if one wants to understand "english" language easily, he can learn the meaning of many words only by learning the meaning of "write" if he can find the root part of these words.\n\nThere is a similar system in Arabic. However, this system is more comprehensive in Arabic. For example,In Arabic kataba (كتب) means "to write". The reason for not writing haraka\'s is that different haraka\'s on the three letters (ك ت ب) will give different meanings related to writing. The original letter can be preceded or followed by other letters. That is, if there are three letters in a word in this serial, it must be understood that the word means something related to writing.\n\nAnother interesting thing is that almost all arabic root words consist of three letters. There are very few exception with four letters. </string>
    <string name="hour_format_12hours" translatable="false">hh:mm</string>
    <string name="hour_format_12_am" translatable="false">hh:mm a</string>
    <string name="hour_format_24hours" translatable="false">HH:mm</string>
    <string name="asr_other">\n(According to Shafi\'i, Hanbali, Maliki Madhhab) Perform the Zuhr prayers before this time if not emergency</string>
    <string name="mid_night">\nLater this time it is makrooh to perform Esha prayer</string>
    <string name="asr_hanafi">\n(According to Hanafi Madhhab) As a precaution, Perform Asr prayer after this time</string>
    <string name="sunrise_note">\nThe last time of Fajr. In case you missed, It must be performed as soon as you wakeup</string>
    <string name="single_word">Each word audio</string>
    <string name="pair_word">Pair words audio</string>
    <string name="convention_name_egypt">Egyptian Survey General Authority</string>
    <string name="convention_name_isna">Islamic Society of North America</string>
    <string name="convention_name_karachi">University of Islamic Studies, Karachi</string>
    <string name="convention_name_makkah">Umm Al-Qura University, Mecca</string>
    <string name="convention_name_mwl">Muslim World League</string>
    <string name="prayer_note">Prayer time of %s</string>
    <string name="_12_times">found 12 times</string>
    <string name="_1682_times">found 1682 times</string>
    <string name="_1972_times">found 1972 times</string>
    <string name="_22_times">found 22 times</string>
    <string name="_68_times">found 68 times</string>
    <string name="_7_times">found 7 times</string>
    <string name="_text_arabic">Arabic</string>
    <string name="a_slight_pause">A slight pause</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_undo">UNDO</string>
    <string name="add_bookmarks">Add Bookmark</string>
    <string name="add_description_email">Please add a description of the error found in the email</string>
    <string name="add_note">Add Note</string>
    <string name="app_name">ILM</string>
    <string name="quran">Quran</string>
    <string name="app_playstore_link" translatable="false">https://play.google.com/store/apps/details?id=com.greentech.quran</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">APPLY</string>
    <string name="audio_channel_description">Play Audio Notifications</string>
    <string name="audio_channel_id">alquranaudio</string>
    <string name="audio_data_disappear_help_text">If Audio Files disappear by themselves, most probably it is due to cleaner utility apps such as Clean Master, CC Cleaner, Du Cleaner, etc. \10\10You can consider moving to internal storage 1, so that they are not removed in sha Allah</string>
    <string name="audio_from">From</string>
    <string name="audio_to">To</string>
    <string name="audio_verseratio"> (%1$d/%2$d verses) </string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="available">Available</string>
    <string name="ayah_copied_popup">Verse Copied</string>
    <string name="background">Select Background</string>
    <string name="backing_up">Backing up</string>
    <string name="basic_info">Basic Info</string>
    <string name="begin_recording">Please begin reciting</string>
    <string name="better_to_continue">Better to continue</string>
    <string name="better_to_stop">Better to stop</string>
    <string name="bettertostp_603_times">found 603 times</string>
    <string name="bismillah">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</string>
    <string name="bismillah_calligraphy">﷽</string>
    <string name="bookmark_added_to">%1$s added to %2$s</string>
    <string name="bookmark_default">Favourite</string>
    <string name="bookmark_last_read">Last Read</string>
    <string name="bookmark_replace">Replaced</string>
    <string name="bookmark_result">\'%1$s\' was found %2$d times</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="canceling">Canceling…</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="cannot_understand">Sorry, we couldn\'t understand you</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_version_format">Version &lt;ns1:g id=\"version_name\"&gt;%s&lt;/ns1:g&gt;</string>
    <string name="channel_description">Notifications fot Al Quran Tafsir By Word</string>
    <string name="channel_id">alquran</string>
    <string name="chapter_and_verse">%1$d:%2$d</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_qari">Choose Qari</string>
    <string name="choose_translations">Choose Translations</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_dismiss">Click here to Dismiss</string>
    <string name="click_more">Click for More</string>
    <string name="click_root_search_quran">Click on root or segments to search Quran</string>
    <string name="close">Close</string>
    <string name="colon_mark">:</string>
    <string name="com.crashlytics.android.build_id">b123abde68ca4a8186484414f7a2bb51</string>
    <string name="comment">Comment</string>
    <string name="copy">Copy Text</string>
    <string name="create_folder_title">Create New Bookmark Folder</string>
    <string name="folder_name_hint">Enter bookmark folder name</string>
    <string name="listen_to_quran">Listen by ayah</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_share">Share</string>
    <string name="ok">OK</string>
    <string name="play">Play</string>
    <string name="pref_font_size">Font Size</string>
    <string name="pref_theme">Change Theme</string>
    <string name="remove_button">Remove</string>
    <string name="save">Save screenshot</string>
    <string name="share_image">Share Screenshot</string>
    <string name="share_text">Share Text</string>
    <string name="test">Ayah Test</string>
    <string name="listen_by_word">Listen by word</string>
    <string name="full_screen">full screen</string>
    <string name="lock_screen">lock screen</string>
    <string name="go_to_page">Go to Page</string>
    <string name="double_page">2 to 1 Page</string>
    <string name="view_by_page">View by Page</string>
    <string name="landscape">Landscape</string>
    <string name="auto_fit">Fit video on screen</string>
    <string name="keep_ratio">Keep video aspect Ratio</string>
    <string name="backward">Forward or backward on double tap</string>
    <string name="sort_by">sort by</string>
    <string name="a_z">Name (A-Z)</string>
    <string name="z_a">Name (Z-A)</string>
    <string name="large_small"><![CDATA[Large->Small]]></string>
    <string name="small_large"><![CDATA[Small->Large]]></string>
    <string name="new_old"><![CDATA[New->Old]]></string>
    <string name="old_new"><![CDATA[Old->New]]></string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="books">Books</string>
    <string name="article">Article</string>
    <string name="fatwa">Fatwa</string>
    <string name="alarm_offset">Write how many minutes before or after start time</string>
    <string name="snooze">Snooze</string>
    <string name="select_time">Or select alarm time</string>
</resources>