<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/play_ayah"
        android:title="@string/listen_to_quran" />
    <item
        android:id="@+id/play_word"
        android:title="@string/listen_by_word" />
    <item
        android:id="@+id/copy_text"
        android:title="@string/copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/share_text"
        android:title="@string/share_text"
        app:showAsAction="never" />
    <item
        android:title="@string/share_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/save_screen"
        android:title="@string/save"
        app:showAsAction="never" />
</menu>