<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/short_by"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/a_z"
                    android:title="@string/a_z" />
                <item
                    android:id="@+id/z_a"
                    android:title="@string/z_a" />
                <item
                    android:id="@+id/large_small"
                    android:title="@string/large_small" />
                <item
                    android:id="@+id/small_large"
                    android:title="@string/small_large" />
                <item
                    android:id="@+id/new_old"
                    android:title="@string/new_old" />
                <item
                    android:id="@+id/old_new"
                    android:title="@string/old_new" />
            </group>
        </menu>
    </item>
</menu>