<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp10">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/agree"
        android:paddingBottom="@dimen/dp10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/edit"
            android:text="@string/alarm_offset" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_back"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:maxLength="5"
            android:padding="@dimen/dp10" />
    </LinearLayout>
<TextView
    android:text="@string/select_time"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:timePickerMode="spinner"/>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_button"
            android:layout_weight="1" />

        <Button
            android:id="@+id/set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>