<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/single"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp10"
    android:background="@drawable/hadis_back"
    android:orientation="vertical"
    android:padding="@dimen/dp10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/bookmark"
            style="?android:attr/actionOverflowButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_bookmarks"
            android:src="@drawable/ic_bookmark" />

        <ImageView
            android:id="@+id/copy_text"
            style="?android:attr/actionOverflowButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_copy"
            android:src="@drawable/copy" />

        <ImageView
            android:id="@+id/share_text"
            style="?android:attr/actionOverflowButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_share"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <TextView
        android:id="@+id/hadis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kalpurush"
        android:paddingTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp10"
        android:textIsSelectable="true" />
</LinearLayout>